package org.example.TEMA6POO.PRACTICA2;

public enum Equipos {

    BENJAMIN, ALEVIN, INFANTIL, CADETE, JUVENIL, SENIOR
}
