package org.example.TEMA6POO.PRACTICA2;

public interface FuncionesIntegrantes {

    void concentrarse();
    void viajar(String ciudad);
    void celebrarGolf();
}
