package org.example.TEMA6POO.PRACTICA2;

public enum Posiciones {

    PORTERO, DEFENSA, CENTROCAMPISTA, DELANTERO
}
